--- a/index.html
+++ b/index.html
@@ -2,51 +2,107 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Edmar Beatingo | AI & Data Science Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Edmar Beatingo | AI & Data Portfolio</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px; line-height: 1.6; }
-    h1 { color: #2e86de; }
-    section { margin-bottom: 40px; }
-    a { color: #2e86de; text-decoration: none; }
-    .container { max-width: 800px; margin: auto; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background-color: #023047;
+      color: #fff;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin-bottom: 10px;
+    }
+    header p {
+      margin: 0;
+      font-size: 18px;
+    }
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 40px 20px;
+    }
+    section {
+      margin-bottom: 50px;
+    }
+    h2 {
+      color: #023047;
+      border-bottom: 2px solid #219ebc;
+      padding-bottom: 10px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    a {
+      color: #0077b6;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      background-color: #023047;
+      color: #fff;
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Edmar Beatingo</h1>
-    <p><strong>Microsoft Certified Azure Data Scientist Associate | DataCamp Certified AI Engineer Associate | Industrial Engineer</strong></p>
 
-    <section>
+  <header>
+    <h1>Edmar Beatingo</h1>
+    <p>AI & Data Science Professional | Azure Certified | Lean Six Sigma Black Belt</p>
+  </header>
+
+  <div class="container">
+
+    <section id="about">
       <h2>About Me</h2>
-      <p>I’m an experienced Industrial Engineer with a solid background in warehouse and retail operations, project leadership, and process improvement. I'm transitioning into data-focused roles through certifications and hands-on experience in AI, data science, and analytics—leveraging platforms like Coursera, Udemy, LinkedIn, and DataCamp.</p>
+      <p>I’m an experienced Industrial Engineer, Microsoft Certified Azure Data Scientist Associate, and DataCamp Certified AI Engineer Associate. With strong foundations in warehouse management, retail operations, and process improvement, I’ve transitioned into AI and data science through continuous upskilling via Coursera, DataCamp, LinkedIn, and Udemy.</p>
     </section>
 
-    <section>
-      <h2>Featured Projects</h2>
+    <section id="projects">
+      <h2>Portfolio Projects</h2>
       <ul>
-        <li><a href="https://github.com/edmarbeatingo/Project_SPARTA-Data_Scientist_Capstone_Project" target="_blank">Earthquake Prediction using Machine Learning (Capstone)</a></li>
-        <li><a href="https://github.com/edmarbeatingo/Excelerate_Internship_Project-Student_Engagement_Churn_Analysis" target="_blank">Student Engagement Churn Analysis</a></li>
-        <li><a href="https://github.com/edmarbeatingo/Datacamp_Project-Data_Driven_Product_Management-Market_Analysis" target="_blank">Product Management Market Analysis</a></li>
+        <li><a href="https://github.com/edmarbeatingo/Project_SPARTA-Data_Scientist_Capstone_Project" target="_blank">Machine Learning Model for Philippine Earthquake Prediction</a></li>
+        <li><a href="https://github.com/edmarbeatingo/Excelerate_Internship_Project-Student_Engagement_Churn_Analysis" target="_blank">Student Engagement Churn Analysis (Excelerate)</a></li>
+        <li><a href="https://github.com/edmarbeatingo/Datacamp_Project-Data_Driven_Product_Management-Market_Analysis" target="_blank">Data-Driven Product Management Market Analysis</a></li>
       </ul>
     </section>
 
-    <section>
+    <section id="certifications">
       <h2>Certifications</h2>
       <ul>
         <li>Microsoft Certified: Azure Data Scientist Associate</li>
-        <li>DataCamp Associate AI Engineer</li>
-        <li>Lean Six Sigma Black Belt – IMC UAE</li>
-        <li>Occupational Safety & Health (BOSH, COSH, RSM)</li>
+        <li>DataCamp Certified: Associate AI Engineer</li>
+        <li>Lean Six Sigma Black Belt (IMC UAE)</li>
+        <li>Occupational Safety & Health (Philippines)</li>
+        <li>Registered Safety Manager (Arizona, USA)</li>
       </ul>
     </section>
 
-    <section>
+    <section id="contact">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:beatingoedmar@gmail.com">beatingoedmar@gmail.com</a></p>
       <p>LinkedIn: <a href="https://www.linkedin.com/in/edmar-beatingo-9a25601aa/" target="_blank">linkedin.com/in/edmar-beatingo</a></p>
       <p>GitHub: <a href="https://github.com/edmarbeatingo" target="_blank">github.com/edmarbeatingo</a></p>
     </section>
+
   </div>
+
+  <footer>
+    &copy; 2025 Edmar Beatingo | Built for GitHub Pages
+  </footer>
+
 </body>
 </html>
